Sprint-3 POS application completed.